Frame Selected/All operators incorrectly frame view #116122

Closed
opened 2023-12-13 07:05:29 +01:00 by Sun Kim · 2 comments
Contributor

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 546.17

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-12-13 01:08, hash: 768cd9b7630c
Worked: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-24 00:19, hash: 23430f4db868

Caused by something between 2023-11-24 00:19, hash: 23430f4db868 and 2023-11-28 01:35, hash: 1e84a028b398

Short description of error
Frame Selected/All operators incorrectly frame the view.

Frame Selected/All with multiple objects only frames the recently added mesh or curve object, as if only that object is selected. When the lastly added object is something like metaball, it frames a seemingly random view.

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 546.17 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-12-13 01:08, hash: `768cd9b7630c` Worked: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-24 00:19, hash: `23430f4db868` Caused by something between 2023-11-24 00:19, hash: `23430f4db868` and 2023-11-28 01:35, hash: `1e84a028b398` **Short description of error** Frame Selected/All operators incorrectly frame the view. Frame Selected/All with multiple objects only frames the recently added mesh or curve object, as if only that object is selected. When the lastly added object is something like metaball, it frames a seemingly random view. <video src="/attachments/01ec2a8f-db3f-418a-a9c3-0140518327c2" title="frame_operators_malfunction.mp4" controls></video>
Sun Kim added the
Status
Needs Triage
Priority
Normal
Type
Report
labels 2023-12-13 07:05:30 +01:00
Member

Hi, thanks for the report. Can confirm the regression.

Hi, thanks for the report. Can confirm the regression.
Member

Git bisect points to 14e3523ac2
@HooglyBoogly ^ 😅

Git bisect points to 14e3523ac26cec0b99d51cde299e2014d23f920e @HooglyBoogly ^ 😅
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2023-12-13 14:20:49 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-12-13 14:43:27 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#116122
No description provided.