Fix #116122: Frame Selected/All operators incorrectly frame view

`BKE_object_minmax` is expected to update the min and max, not just set them.